fixing border overlap on mobile

--- a/style/main.css
+++ b/style/main.css
@@ -208,7 +208,7 @@ body {
 
 @media(max-width:1000px) {
     body {
-        width: 100%;
+        width: 98%;
     }
 
     .about {
